MAT-8038: fix test